Fixed group chat room management methods. ChatRoomService refactoring.